@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.ogema.tools</groupId>
         <artifactId>ogema-tools</artifactId>
-        <version>2.1.3</version>
+        <version>2.2.0</version>
     </parent>
 
-    <groupId>de.iwes.widgets</groupId>
+    <groupId>org.ogema.widgets</groupId>
     <artifactId>ogema-widgets</artifactId>
-    <version>2.1.3</version>
+    <version>2.2.0</version>
 
     <packaging>pom</packaging>
     <name>OGEMA Tools :: Widgets</name>
@@ -20,23 +20,26 @@
 		<connection>scm:git:ssh://ogema-source.net:fhg-alliance-internal</connection>
 		<developerConnection>scm:git:ssh://git@ogema-source.net:fhg-alliance-internal</developerConnection>
 		<url>scm:git:ssh://ogema-source.net:fhg-alliance-internal</url>
-		<tag>ogema-widgets-2.1.3</tag>
+		<tag>ogema-widgets-2.2.0</tag>
 	</scm>
 
 	    <!-- Sub-projects: OGEMA Applications (in alphabetical order) -->
     <modules>
     	<module>icon-service-impl</module>
+		<module>lazy-pages-service</module>
 		<module>messaging</module>
 		<module>name-service-impl</module>
 		<module>ogema-gui-api</module>
 		<module>ogema-js-bundle</module>
 	    <module>simulations</module>
-		<!--<module>templates</module>-->
-	 	<module>widget-apps</module>
+		<module>timeseries-tools</module>
+	 	<module>util-extended</module>
+	 	<module>widget-apps</module> 
 		<module>widget-collection</module>
-		<module>widget-exam-base</module>
+	 	<module>widget-exam-base</module>
 		<module>widget-experimental</module>
 		<module>widget-extended</module>
+		<module>widget-models-proposed</module>
 	    <module>widget-tools</module>
   </modules>
 
@@ -45,7 +48,7 @@
 				Use the following command to create javadoc for the API bundles only. Note the dot at the end for the current project.
 				Unfortunately, the bundles to be inclduded cannot easily be specified at pom level:
 
-				 mvn -DskipTests -Pgenerate-javadoc -Dadditionalparam=-Xdoclint:none -Dauthor=false install -pl ogema-gui-api,ogema-js-bundle,widget-collection,widget-extended,util-extended,widget-experimental,simulations/simulation-service,simulations/roomsimulation-service,.
+				 mvn -DskipTests -Pgenerate-javadoc -Dadditionalparam=-Xdoclint:none -Dauthor=false install -pl ogema-gui-api,ogema-js-bundle,widget-collection,widget-extended,util-extended,widget-experimental,simulations/simulation-service,simulations/roomsimulation-service,simulations/composite-sim-service,timeseries-tools/timeseries-api-extended,.
 			 -->
     		<profile>
 			<id>generate-javadoc</id>
@@ -90,71 +93,142 @@
 	        </properties>
 	    </profile>
 -->
+		<profile>
+            <id>java7</id><!-- java versions < 9 -->
+            <activation>
+                <!--
+                note: not using <jdk> due to a bug in our ancient ci server
+                    <jdk>[1.7,1.9)</jdk>
+                -->
+                <file>
+                    <missing>${java.home}/jmods</missing>
+                </file>
+            </activation>
+            <properties>
+                <surefire-args>
+                    -ea
+                </surefire-args>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                ${surefire-args}
+                            </argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java9</id><!-- java versions 9 and greater -->
+            <activation>
+                <!-- 
+                note: not using <jdk> due to a bug in our ancient ci server
+                    <jdk>[9,)</jdk>
+                -->
+                <file>
+                    <exists>${java.home}/jmods</exists>
+                </file>
+            </activation>
+            <properties>
+                <surefire-args>
+                    -ea
+                    --illegal-access=warn
+                    --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+                    --add-modules java.xml.bind,java.xml.ws.annotation
+                </surefire-args>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                ${surefire-args}
+                            </argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 	</profiles>
 	<build>
-        <plugins>
-       		<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<showDeprecation>true</showDeprecation>
-					<showWarnings>true</showWarnings>
-					<compilerArgs>
-						<arg>-Xlint</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-            </plugin>
-        </plugins>
+		<pluginManagement>
+        	<plugins>
+	       		<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<showDeprecation>true</showDeprecation>
+						<showWarnings>true</showWarnings>
+						<compilerArgs>
+							<arg>-Xlint</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+        	</plugins>
+        </pluginManagement>
     </build>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>ogema-gui-api</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>ogema-js-bundle</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>widget-collection</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>widget-extended</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>widget-experimental</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.tools</groupId>
+	            <groupId>org.ogema.widgets</groupId>
+	            <artifactId>util-extended</artifactId>
+	            <version>2.2.0</version>
+        	</dependency>
+        	<dependency>
+	            <groupId>org.ogema.tools</groupId>
 	            <artifactId>standard-patterns</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
         	<dependency>
-	            <groupId>de.iwes.widgets</groupId>
+	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>widget-exam-base</artifactId>
-	            <version>2.1.3</version>
+	            <version>2.2.0</version>
         	</dependency>
 			<dependency>
 				<groupId>org.json</groupId>
 				<artifactId>json</artifactId>
 				<version>20170516</version>
 			</dependency>
+			<dependency>
+	        	<groupId>org.apache.felix</groupId>
+	        	<artifactId>org.apache.felix.framework</artifactId>
+	        	<version>5.6.10</version>
+	        </dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
